20 August 1993 Done rate redirection Working perfect till now.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -139,4 +139,8 @@
     <string name="placeorder">PLACE ORDER</string>
     <string name="web">WEB</string>
     <string name="favourite">FAVOURITE</string>
+    <string name="title_activity_dialog_custom">Rate</string>
+
+    <string name="hello_world">Hello world!</string>
+    <string name="action_settings">Settings</string>
 </resources>
