--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -143,4 +143,6 @@
 
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
+    <string name="title_activity_detailed_deal">DetailedDeal</string>
+    <string name="title_activity_deals_intermediate">DealsIntermediateActivity</string>
 </resources>
